# chat-api

chat-api/: .gitignore  CHANGELOG.md  chat.cabal
chat-api/app/: CLI.hs  Main.hs
chat-api/client/: Main.hs
chat-api/src/: Chat.hs
chat-api/src/Chat/: Capabilities.hs  Data.hs  Env.hs
chat-api/src/Chat/Data/: Announcement.hs  Client.hs
chat-api/test/: Spec.hs
chat-web/: .gitignore  .purty.dhall  Makefile  app.html  app.js  assets.js  package-lock.json  package.json  packages.dhall  spago.dhall
chat-web/src/: API.purs  AppM.purs  Assets.js  Assets.purs  Env.purs  Icon.purs  Main.purs  Sandbox.purs
chat-web/src/Capability/: Hub.purs  Logging.purs  Navigation.purs  Now.purs
chat-web/src/Component/: Contact.purs  Raw.js  Raw.purs  Room.purs  Router.purs  Welcome.purs
chat-web/src/Component/HTML/: Button.purs  Footer.purs  Header.purs  Utils.purs
chat-web/src/Data/: BaseURL.purs  Connection.purs  Log.purs  Message.purs  Route.purs  User.purs  Username.purs
chat-web/src/Form/: Field.purs  Validation.purs
chat-web/src/Form/Validation/: Error.purs  Utils.purs
chat-web/src/Page/: Contact.purs  Room.purs  Welcome.purs
chat-web/src/Page/Room/: Message.purs  MessageForm.purs
chat-web/src/Page/Welcome/: JoinForm.purs
chat-web/src/Utils/: Conditional.purs
chat-web/src/Web/Socket/: WebSocket.purs
chat-web/styles/: app.css
chat-web/test/: Main.purs
chat-web/test/Spec/: Capability.purs  Data.purs  Utils.purs
chat-web/test/Spec/Data/: Message.purs
