cabal-version:       2.2
name:                chat
version:             0.1.0.0
synopsis:            Chat API
description:         Example chat API
license:             MIT
license-file:        LICENSE
author:              Vasiliy Yorkin
maintainer:          vasiliy.yorkin@gmail.com
copyright:           2018 (c) Vasiliy Yorkin aka vyorkin
category:            Network
build-type:          Simple
extra-source-files:  CHANGELOG.md

common main
  build-depends:       base >= 4.11 && < 4.12
                     , relude ^>= 0.3
                     , co-log ^>= 0.2
                     , text ^>= 1.2
                     , bytestring ^>= 0.10
                     , containers ^>= 0.6
                     , unliftio-core ^>= 0.1
                     , network ^>= 2.8
                     , websockets ^>= 0.12
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

common exe
  import:              main
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

library
  import:              main
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
  exposed-modules:     Chat
                     , Chat.Env
                     , Chat.Data
                     , Chat.Capabilities
  other-modules:       Chat.Data.Client
                     , Chat.Data.Announcement
  hs-source-dirs:      src

executable chat-server
  import:              exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       chat
                     , optparse-applicative ^>= 0.14
                     , directory ^>= 1.3
  other-modules:       CLI

executable chat-client
  import:              exe
  hs-source-dirs:      client
  main-is:             Main.hs
  build-depends:       chat

test-suite chat-test
  import:              main
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  type:                exitcode-stdio-1.0
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
  build-depends:       chat
                     , hspec
                     , tasty
                     , tasty-hspec
                     , tasty-discover
  hs-source-dirs:      test
  main-is:             Spec.hs
